zeta-code/cli/tests/snapshots/real/05-errors/00-auth-failure.snap
---
source: zeta-code/cli/tests/support/tui_process.rs
expression: screen
---
> 触发 401 鉴权失败

● Model provider authentication failed

● The model provider rejected the current credentials. Sign in again or update the provider
credentials, then retry.




















                                                                         shift+tab to cycle policy
────────────────────────────────────────────────────────────────────────────────────────────────────
>
────────────────────────────────────────────────────────────────────────────────────────────────────
  zeta-real-scenario                                                                      ← agents
  ⏸ ask permissions on
