zeta-code/cli/tests/snapshots/real/05-errors/01-auth-recovered.snap
---
source: zeta-code/cli/tests/support/tui_process.rs
expression: screen
---

    ▄  ▄     Zeta Code v0.1.0
  ▗█▛██▜█▖   openai-compatible/zeta-real-scenario · Access unknown
  ▝▜████▛▘   <FIXTURE>/workspace
    ▝  ▘

> 触发 401 鉴权失败

● Authentication failed (401). Check your provider credentials in /config.

> 鉴权失败后继续下一轮

● 401 之后的下一轮恢复成功。













                                                                         shift+tab to cycle policy
────────────────────────────────────────────────────────────────────────────────────────────────────
>
────────────────────────────────────────────────────────────────────────────────────────────────────
  zeta-real-scenario
  ⏸ ask permissions on
