zeta-code/cli/tests/snapshots/real/05-errors/03-rate-limit-recovered.snap
---
source: zeta-code/cli/tests/support/tui_process.rs
expression: screen
---

    ▄  ▄     Zeta Code v0.1.0
  ▗█▛██▜█▖   openai-compatible/zeta-real-scenario · Access unknown
  ▝▜████▛▘   <FIXTURE>/workspace
    ▝  ▘

> 触发 429 限流和自动重试

● Too many requests (429). Try again later.

> 限流失败后继续下一轮

● 429 重试耗尽后仍可恢复。














────────────────────────────────────────────────────────────────────────────────────────────────────
>
────────────────────────────────────────────────────────────────────────────────────────────────────
  zeta-real-scenario
  ⏸ ask permissions on
