zeta-code/cli/tests/snapshots/real/05-errors/04-missing-model.snap
---
source: zeta-code/cli/tests/support/tui_process.rs
expression: screen
---

    ▄  ▄     Zeta Code v0.1.0
  ▗█▛██▜█▖   Automatic model · Access unknown
  ▝▜████▛▘   <FIXTURE>/workspace
    ▝  ▘

> hello

● Check your provider and model configuration in /config.

















                                                                         shift+tab to cycle policy
────────────────────────────────────────────────────────────────────────────────────────────────────
>
────────────────────────────────────────────────────────────────────────────────────────────────────

  ⏸ ask permissions on
